Bug #6019 - SELECT tries to use too short prefix index on utf8 data Field_string::pack should respect max_length as Field_string::pack_key does